# Pick-at-Random

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  tasks.py
src/pick_at_random/application/: __init__.py  ports.py  use_cases.py
src/pick_at_random/cli/: __init__.py  main.py
src/pick_at_random/domain/: __init__.py  models.py  randomizer.py
src/pick_at_random/infrastructure/: __init__.py  clock.py  config.py  csv_reader.py  host_info.py  ntp_time_source.py  pdf_writer.py  randomizer.py  signer.py
tests/integration/: conftest.py  test_cli_main.py  test_end_to_end.py
tests/unit/application/: fakes.py  test_use_cases.py
tests/unit/cli/: test_main.py
tests/unit/domain/: test_models.py  test_randomizer.py
tests/unit/infrastructure/: test_clock.py  test_config.py  test_csv_reader.py  test_host_info.py  test_ntp_time_source.py  test_pdf_writer.py  test_randomizer.py
